# casper_dspdevel

./: .gitattributes  .gitconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .library_mapping.xml  .project  .readthedocs.yaml  README.md  casper_dspdevel_teros.csv  create_venv.sh  init_radiohdl_for_casper_dspdevel.sh  requirements.txt  vunit_teros.csv
casper_accumulators/: addr_bram_vacc.vhd  dsp48e_bram_vacc.vhd  run.py  simple_accumulator.vhd  simple_bram_vacc.vhd  tb_addr_bram_vacc.vhd  tb_dsp48e_bram_vacc.vhd  tb_simple_bram_vacc.vhd  tb_tb_vu_addr_bram_vacc.vhd  tb_tb_vu_simple_bram_vacc.vhd
casper_adder/: casper_adder.slx  casper_adder_report.xml  casper_common_add_sub.vhd  casper_common_add_sub_config.m  casper_common_add_sub_tb.vhd  casper_common_add_sub_tb_tb.vhd  common_add_sub.vhd  common_adder_tree.vhd  common_adder_tree_a_str.vhd  hdllib.cfg  run.py  tb_common_add_sub.vhd  tb_common_adder_tree.vhd  tb_tb_common_add_sub.vhd  tb_tb_common_adder_tree.vhd  tb_tb_vu_common_add_sub.vhd  test_output.xml
casper_bus/: bus_accumulator.vhd  bus_accumulator_stringgenerics.vhd  bus_dual_port_ram.vhd.proto  bus_fill_slv_arr.vhd  bus_mux.vhd  bus_replicate.vhd  run.py  tb_bus_accumulator.vhd  tb_bus_mux.vhd  tb_bus_replicate.vhd  tb_tb_vu_bus_accumulator.vhd  tb_tb_vu_bus_mux.vhd  tb_tb_vu_bus_replicate.vhd
casper_common_components/: common_async.vhd  common_components_pkg.vhd  common_delay.vhd  common_pipeline.vhd  (+2 more)
r2sdf_fft/casper_r2sdf_fft_py/: LICENSE  README.md  make_build.sh  pyproject.toml
r2sdf_fft/casper_r2sdf_fft_py/src/casper_r2sdf_fft/: __init__.py
(+2804 files in other folders)
